--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,38 @@
 appnope==0.1.0
 backports.shutil-get-terminal-size==1.0.0
+click==6.6
 cookies==2.2.1
+croniter==0.3.12
 decorator==4.0.10
 Django==1.10
+django-rq==0.9.2
 djangorestframework==3.4.1
+-e git+https://github.com/mobolic/facebook-sdk.git@1d61a6996a45c1a6747d5f2712d258344ceffb2b#egg=facebook_sdk-master
 funcsigs==1.0.2
 ipython==5.0.0
 ipython-genutils==0.1.0
 lxml==3.6.1
+oauthlib==1.1.2
 pathlib2==2.1.0
 pbr==1.10.0
 pexpect==4.2.0
 pickleshare==0.7.3
+Pillow==3.3.0
 prompt-toolkit==1.0.4
+psycopg2==2.6.2
 ptyprocess==0.5.1
 Pygments==2.1.3
+python-dateutil==2.5.3
+pytz==2016.6.1
+redis==2.10.5
+requests==2.10.0
+requests-oauthlib==0.6.2
+rq==0.6.0
+rq-scheduler==0.7.0
+selenium==2.53.6
 simplegeneric==0.8.1
 six==1.10.0
 traitlets==4.2.2
+tweepy==3.5.0
 wcwidth==0.1.7
 wheel==0.24.0
-selenium==2.53.6
-Pillow==3.3.0
-tweepy==3.5.0
-pytz==2016.6.1
-rq==0.6.0
-django-rq==0.9.2
