--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ pexpect==4.2.0
 pickleshare==0.7.3
 Pillow==5.0.0
 prompt-toolkit==1.0.4
-psycopg2==2.7
+psycopg2
 ptyprocess==0.5.1
 Pygments==2.1.3
 python-dateutil==2.5.3
