--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,10 @@ dj-database-url==0.4.1
 Django==2.2.24
 django-rq==0.9.2
 djangorestframework==3.11.2
--e git+https://github.com/mobolic/facebook-sdk.git@ffd9980700be48964d6a6a61144edb1c3ea29cff#egg=facebook_sdk-master
+-e git+https://github.com/mobolic/facebook-sdk.git@ffd9980700be48964d6a6a61144edb1c3ea29cff#egg=facebook_sdk
 funcsigs==1.0.2
 ipython==5.0.0
 ipython-genutils==0.1.0
-lxml==3.6.1
 oauthlib==1.1.2
 pathlib2==2.1.0
 pbr==1.10.0
@@ -20,7 +19,7 @@ pexpect==4.2.0
 pickleshare==0.7.3
 Pillow==5.0.0
 prompt-toolkit==1.0.4
-psycopg2
+psycopg2-binary==2.8.6
 ptyprocess==0.5.1
 Pygments==2.1.3
 python-dateutil==2.5.3
