--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,13 @@ djangorestframework==3.11.2
 funcsigs==1.0.2
 ipython==5.0.0
 ipython-genutils==0.1.0
+lxml==4.6.3
 oauthlib==1.1.2
 pathlib2==2.1.0
 pbr==1.10.0
 pexpect==4.2.0
 pickleshare==0.7.3
-Pillow==5.0.0
+Pillow==8.3.2
 prompt-toolkit==1.0.4
 psycopg2-binary==2.8.6
 ptyprocess==0.5.1
@@ -31,7 +32,7 @@ selenium==2.53.6
 simplegeneric==0.8.1
 six==1.10.0
 traitlets==4.2.2
-tweepy==3.5.0
+tweepy==3.9.0
 wcwidth==0.1.7
 wheel==0.24.0
 telepot==9.1
